# chip8

./: CMakeLists.txt
include/chip8/: chip8.h
src/: CMakeLists.txt  chip8.cpp  chip8.h  chip8_config.h.in  chip8_gfx.cpp  chip8_gfx.h  chip8_gfx_terminal.cpp  chip8_gfx_terminal.h  chip8_input.cpp  chip8_input.h  chip8_input_terminal.cpp  chip8_input_terminal.h  chip8_system.cpp  chip8_system.h  main.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  chip8_test.cpp
test/data/: test_rom_2
